--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                   <img src="img/vivid.png" alt="Image" />
                   <div class="tm-special-item-description">
                     <h2 class="tm-text-primary tm-special-item-title">
-                      비비드 시드니
+                      호주 비비드 시드니
                     </h2>
                     <p>개최 기간 : 2023.5.26 ~ 6.17</p>
                     <p class="tm-special-item-text">
