--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                 <li class="tm-page-nav-item">
                   <a href="#drink" class="tm-page-link active">
                     <i class="fas fa-mug-hot tm-page-link-icon"></i>
-                    <span>국내 축제 소개</span>
+                    <span>Festival of Korea</span>
                   </a>
                 </li>
                 <li class="tm-page-nav-item">
@@ -44,7 +44,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                 <li class="tm-page-nav-item">
                   <a href="#special" class="tm-page-link">
                     <i class="fas fa-glass-martini tm-page-link-icon"></i>
-                    <span>해외 축제 소개</span>
+                    <span>Festival of abroad</span>
                   </a>
                 </li>
                 <li class="tm-page-nav-item">
@@ -69,9 +69,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                     >
                   </li>
                   <li>
-                    <a href="#" class="tm-tab-link" data-id="hot"
-                      >Chungcheongnam-do</a
-                    >
+                    <a href="#" class="tm-tab-link" data-id="hot">Chungnam</a>
                   </li>
                   <li>
                     <a href="#" class="tm-tab-link" data-id="juice">Jeju</a>
@@ -89,13 +87,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Iced Americano<span class="tm-list-item-price"
-                          >$10.25</span
-                        >
+                        <a
+                          href="https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bk00&pkid=110&os=24779000&qvt=0&query=%EB%B0%A4%EC%9D%98%20%EC%84%9D%EC%A1%B0%EC%A0%84"
+                          rel="nofollow"
+                          target="_parent"
+                          >밤의 석조전</a
+                        ><span class="tm-list-item-price">04.11. ~ 05.11.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Here is a short description for the first item. Wave
-                        Cafe Template is provided by Tooplate.
+                        전문 해설사와 함께하는 '석조전 야간 탐방'등 여러 체험이
+                        어우러진 덕수궁 야간 프로그램
                       </p>
                     </div>
                   </div>
@@ -107,13 +108,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Iced Cappuccino<span class="tm-list-item-price"
-                          >$12.50</span
-                        >
+                        <a
+                          href="https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bk00&pkid=110&os=9592648&qvt=0&query=%EC%B0%BD%EB%8D%95%EA%B6%81%20%EB%8B%AC%EB%B9%9B%EA%B8%B0%ED%96%89"
+                          rel="nofollow"
+                          target="_parent"
+                          >창덕궁 달빛기행</a
+                        ><span class="tm-list-item-price">04.14. ~ 10.28.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Here is a list of 4 items or add more. You can use this
-                        template for commercial purposes.
+                        은은 달빛아래 창덕궁에서 전문해설사와 함께 전각에 대한
+                        해설과 전통예술공연을 관람할 수 있는 프로그램
                       </p>
                     </div>
                   </div>
@@ -125,13 +129,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Iced Espresso<span class="tm-list-item-price"
-                          >$14.25</span
-                        >
+                        <a
+                          href="https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bk00&pkid=110&os=13861622&qvt=0&query=%EA%B2%BD%EB%B3%B5%EA%B6%81%20%EB%B3%84%EB%B9%9B%EC%95%BC%ED%96%89"
+                          rel="nofollow"
+                          target="_parent"
+                          >경복궁 별빛야행</a
+                        ><span class="tm-list-item-price">04.14. ~ 05.13.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        You are not permitted to redistribute this template ZIP
-                        file on any other template websites.
+                        은은한 별빛 아래 경복궁 소주방에서 임금님의 수라상을
+                        맛보고, 전문해설사와 함께 하는 프로그램
                       </p>
                     </div>
                   </div>
@@ -143,17 +150,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Iced Latte<span class="tm-list-item-price">$11.50</span>
-                      </h3>
-                      <p class="tm-list-item-description">
-                        Contents are organized into 3 tabs. Please
                         <a
-                          href="https://www.tooplate.com/contact"
+                          href="https://korean.visitkorea.or.kr/detail/fes_detail.do?cotid=42fa18b4-2fde-416e-84d6-dbe2b6452870"
                           rel="nofollow"
                           target="_parent"
-                          >contact Tooplate</a
-                        >
-                        if you have anything to ask.
+                          >DDP 봄축제</a
+                        ><span class="tm-list-item-price">05.04. ~ 05.07.</span>
+                      </h3>
+                      <p class="tm-list-item-description">
+                        2023년 5월 4일~7일, 4일간 DDP(동대문디자인플라자)에서
+                        진행되는 놀이동산을 포함한 종합문화행사
                       </p>
                     </div>
                   </div>
@@ -170,13 +176,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Hot Americano<span class="tm-list-item-price"
-                          >$8.50</span
-                        >
+                        <a
+                          href="https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bk00&pkid=110&os=25894222&qvt=0&query=%ED%94%BC%EB%82%98%ED%81%B4%EB%9E%9C%EB%93%9C%20%ED%8A%A4%EB%A6%BD%20%EC%88%98%EC%84%A0%ED%99%94%20%EC%B6%95%EC%A0%9C"
+                          rel="nofollow"
+                          target="_parent"
+                          >피나클랜드 튤립/수선화 축제</a
+                        ><span class="tm-list-item-price">03.24. ~ 05.30.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Here is a short description for the item along with a
-                        squared thumbnail.
+                        형형색색 멋진 옷을 입은 튤립과 우와한 자태를 뽐내는
+                        수선화들의 향연
                       </p>
                     </div>
                   </div>
@@ -188,13 +197,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Hot Cappuccino<span class="tm-list-item-price"
-                          >$9.50</span
-                        >
+                        <a
+                          href="https://korean.visitkorea.or.kr/detail/fes_detail.do?cotid=62a25a47-ff3f-4949-a775-0056edf3d08f"
+                          rel="nofollow"
+                          target="_parent"
+                          >피나클랜드 불꽃 축제</a
+                        ><span class="tm-list-item-price">03.25. ~ 05.27.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Here is a list of 4 items that can add more as you need.
-                        Only content area will be scrolling.
+                        낮에는 튤립, 수선화가 봄을 맞이하고, 밤에는 불꽃이
+                        수놓는 피나클랜드의 봄
                       </p>
                     </div>
                   </div>
@@ -206,13 +218,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Hot Espresso<span class="tm-list-item-price"
-                          >$7.50</span
-                        >
+                        <a
+                          href="http://www.ffestival.co.kr/main"
+                          rel="nofollow"
+                          target="_parent"
+                          >태안 빛축제</a
+                        ><span class="tm-list-item-price">01.01. ~ 12.31.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Left side logo and main menu are fixed. The video
-                        background is fixed.
+                        일년 365일 연중무휴로 진행되는 태안빛축제가 대한민국의
+                        밤하늘을 책임진다.
                       </p>
                     </div>
                   </div>
@@ -224,11 +239,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Hot Latte<span class="tm-list-item-price">$6.50</span>
+                        <a
+                          href="https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bk00&pkid=110&os=17701355&qvt=0&query=%EB%B6%80%EC%86%8C%EC%82%B0%20%EB%B4%84%20%EB%82%98%EB%93%A4%EC%9D%B4%20%EC%B6%95%EC%A0%9C"
+                          rel="nofollow"
+                          target="_parent"
+                          >부소산 봄 나들이 축제</a
+                        ><span class="tm-list-item-price">05.05. ~ 05.07.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Page contents are organized into 3 tabs to show
-                        different lists of items.
+                        유네스코 세계유산인 관북리유적과 부소산성에서 즐기는
+                        특별한 경험과 부여의 봄을 만끽 할 수 있는 축제
                       </p>
                     </div>
                   </div>
@@ -245,13 +265,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Strawberry Smoothie<span class="tm-list-item-price"
-                          >$12.50</span
-                        >
+                        <a
+                          href="https://korean.visitkorea.or.kr/detail/fes_detail.do?cotid=02dcefcc-4cb4-48b3-bc4f-8b40ebf3d1ff&big_category=undefined&mid_category=undefined&big_area=undefined&referrer=https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bk00&pkid=110&os=25890440&qvt=0&query=%ED%9C%B4%EC%95%A0%EB%A6%AC%20%EB%B4%84%20%EC%88%98%EA%B5%AD%EC%B6%95%EC%A0%9C"
+                          rel="nofollow"
+                          target="_parent"
+                          >휴애리 봄 수국축제</a
+                        ><span class="tm-list-item-price">04.07. ~ 06.14.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Here is a short description for the item along with a
-                        squared thumbnail.
+                        오색빛깔 다양한 수국을 제주 휴애리 자연생활공원에서
+                        만나볼 수 있는 축제
                       </p>
                     </div>
                   </div>
@@ -263,13 +286,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Red Berry Smoothie<span class="tm-list-item-price"
-                          >$14.50</span
-                        >
+                        <a
+                          href="https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bk00&pkid=110&os=10735797&qvt=0&query=%EB%A7%88%EB%85%B8%EB%A5%B4%EB%B8%94%EB%9E%91%20%EB%B4%84%EA%BD%83%EC%B6%95%EC%A0%9C"
+                          rel="nofollow"
+                          target="_parent"
+                          >마노르블랑 봄꽃 축제</a
+                        ><span class="tm-list-item-price">03.05. ~ 04.16.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Here is a list of 4 items or add more. You can use this
-                        template for commercial purposes.
+                        다양한 색의 프리지아, 애니시다, 서향동백 등 아름다운
+                        꽃과 즐기는 가든 카페의 꽃향기 축제
                       </p>
                     </div>
                   </div>
@@ -281,13 +307,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Pineapple Smoothie<span class="tm-list-item-price"
-                          >$16.50</span
-                        >
+                        <a
+                          href="http://www.jejugosari.net/"
+                          rel="nofollow"
+                          target="_parent"
+                          >한라산 청정 고사리 축제</a
+                        ><span class="tm-list-item-price">04.29. ~ 04.30.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        Left side logo and main menu are fixed. The video
-                        background is fixed.
+                        고사리를 테마로 도민과 관광객에게 제주의 문화를 전달하는
+                        다양한 프로그램
                       </p>
                     </div>
                   </div>
@@ -299,13 +328,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                     />
                     <div class="tm-black-bg tm-list-item-text">
                       <h3 class="tm-list-item-name">
-                        Spinach Smoothie<span class="tm-list-item-price"
-                          >$18.50</span
-                        >
+                        <a
+                          href="https://korean.visitkorea.or.kr/detail/fes_detail.do?cotid=2ec8235d-eed8-4f28-b894-6cd55e3f106f&big_category=undefined&mid_category=undefined&big_area=undefined&referrer=https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bk00&pkid=110&os=28780574&qvt=0&query=%EC%A0%9C%EC%A3%BC%20%EB%B0%98%EB%A0%A4%EB%8F%99%EB%AC%BC%20%EB%AC%B8%ED%99%94%EC%B6%95%EC%A0%9C"
+                          rel="nofollow"
+                          target="_parent"
+                          >제주 반려동물 축제</a
+                        ><span class="tm-list-item-price">05.06. ~ 05.07.</span>
                       </h3>
                       <p class="tm-list-item-description">
-                        You are not allowed to redistribute the template ZIP
-                        file on other template sites.
+                        올바른 반려동물 문화 정착으로 사람과 동물이 행복한
+                        제주를 위한 축제
                       </p>
                     </div>
                   </div>
@@ -317,7 +349,9 @@ https://www.tooplate.com/view/2121-wave-cafe
             <!-- About Us Page -->
             <div id="about" class="tm-page-content">
               <div class="tm-black-bg tm-mb-20 tm-about-box-1">
-                <h2 class="tm-text-primary tm-about-header">About Wave Cafe</h2>
+                <h2 class="tm-text-primary tm-about-header">
+                  About Festival Wave
+                </h2>
                 <div class="tm-list-item tm-list-item-2">
                   <img
                     src="img/about-1.png"
@@ -326,14 +360,24 @@ https://www.tooplate.com/view/2121-wave-cafe
                   />
                   <div class="tm-list-item-text-2">
                     <p>
-                      Wave Cafe is a one-page video background HTML CSS template
-                      from Tooplate. You can use this for your business
-                      websites.
+                      강채린: 웹 디자인, Festival of abroad Page 제작, About Us
+                      Page 제작<br />github:
+                      <a
+                        href="https://github.com/QWOFTQ?tab=repositories"
+                        rel="nofollow"
+                        target="_parent"
+                        >link</a
+                      >
                     </p>
                     <p>
-                      You can also use this for your client websites which you
-                      get paid for your website services. Please tell your
-                      friends about us.
+                      홍예진: 웹 디자인, Festival of Korea Page 제작, 웹페이지
+                      데모 영상 촬영<br />github:
+                      <a
+                        href="https://github.com/Han-Enc?tab=repositories"
+                        rel="nofollow"
+                        target="_parent"
+                        >link</a
+                      >
                     </p>
                   </div>
                 </div>
@@ -439,7 +483,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                   <img src="img/bath.png" alt="Image" />
                   <div class="tm-special-item-description">
                     <h2 class="tm-text-primary tm-special-item-title">
-                      영국 바스 프린지 페스티벌
+                      영국 바스 프린지 <br />페스티벌
                     </h2>
                     <p>개최 기간 : 2023.5.26 ~ 6.11</p>
                     <p class="tm-special-item-text">
@@ -510,11 +554,10 @@ https://www.tooplate.com/view/2121-wave-cafe
             <!-- Contact Page -->
             <div id="contact" class="tm-page-content">
               <div class="tm-black-bg tm-contact-text-container">
-                <h2 class="tm-text-primary">Contact Wave</h2>
+                <h2 class="tm-text-primary">Contact with Us</h2>
                 <p>
-                  Wave Cafe Template has a video background. You can use this
-                  layout for your websites. Please contact Tooplate's Facebook
-                  page. Tell your friends about our website.
+                  이 웹사이트가 마음에 드셨나요? 다른 작품을 저희에게
+                  의뢰해보세요! 아래의 폼으로 연락할 수 있습니다.
                 </p>
               </div>
               <div class="tm-black-bg tm-contact-form-container tm-align-right">
