--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wave Cafe HTML Template by Tooplate</title>
+    <title>Festival Wave</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
     <!-- https://fontawesome.com/ -->
     <link
@@ -368,12 +368,27 @@ https://www.tooplate.com/view/2121-wave-cafe
                         target="_parent"
                         >link</a
                       >
+                      <br />개인 홈페이지 주소:
+                      <a
+                        href="https://portfolio-final92.netlify.app"
+                        rel="nofollow"
+                        target="_parent"
+                        >link</a
+                      >
                     </p>
                     <p>
                       홍예진: 웹 디자인, Festival of Korea Page 제작, 웹페이지
                       데모 영상 촬영<br />github:
                       <a
                         href="https://github.com/Han-Enc?tab=repositories"
+                        rel="nofollow"
+                        target="_parent"
+                        >link</a
+                      >
+
+                      <br />개인 홈페이지 주소:
+                      <a
+                        href="https://enc-personal-portfolio.netlify.app"
                         rel="nofollow"
                         target="_parent"
                         >link</a
