--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                     <iframe
                       width="560"
                       height="315"
-                      src="https://www.youtube.com/embed/C1hSuCmFZuc"
+                      src="https://www.youtube.com/embed/c2b7wmi90bc"
                       title="YouTube video player"
                       frameborder="0"
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
