--- a/index.html
+++ b/index.html
@@ -64,17 +64,19 @@ https://www.tooplate.com/view/2121-wave-cafe
               <!-- Drink Menu Page -->
               <nav class="tm-black-bg tm-drinks-nav">
                 <ul>
-                  <div id="temperature"></div>
                   <li>
+                    <div id="temperature" style="text-align: center"></div>
                     <a href="#" class="tm-tab-link active" data-id="cold"
                       >Seoul</a
                     >
                   </li>
 
                   <li>
+                    <div id="temp1" style="text-align: center"></div>
                     <a href="#" class="tm-tab-link" data-id="hot">Chungnam</a>
                   </li>
                   <li>
+                    <div id="temp2" style="text-align: center"></div>
                     <a href="#" class="tm-tab-link" data-id="juice">Jeju</a>
                   </li>
                 </ul>
@@ -671,6 +673,7 @@ https://www.tooplate.com/view/2121-wave-cafe
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/weather.js"></script>
 
     <script>
       function setVideoSize() {
