--- a/index.html
+++ b/index.html
@@ -382,12 +382,7 @@ https://www.tooplate.com/view/2121-wave-cafe
             <!-- About Us Page -->
             <div id="about" class="tm-page-content">
               <div class="tm-black-bg tm-mb-20 tm-about-box-1">
-                <a
-                  href="https://www.youtube.com/embed/c2b7wmi90bc"
-                  class="tm-text-primary tm-about-header"
-                >
-                  About Festival Wave
-                </a>
+                <h2 class="tm-text-primary tm-about-header">About Festival Wave</h2>
                 <div class="tm-list-item tm-list-item-2">
                   <img
                     src="img/about-1.png"
@@ -433,6 +428,25 @@ https://www.tooplate.com/view/2121-wave-cafe
                   </div>
                 </div>
               </div>
+
+              <div class="tm-black-bg tm-mb-20 tm-about-box-2">
+                <div class="tm-list-item tm-list-item-2">
+                  <div class="tm-list-item-text-2">
+                    <h2 class="tm-text-primary">YouTube - 중간고사</h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/c2b7wmi90bc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+              </div>
+
+              <div class="tm-black-bg tm-mb-20 tm-about-box-2">
+                <div class="tm-list-item tm-list-item-2">
+                  <div class="tm-list-item-text-2">
+                    <h2 class="tm-text-primary">YouTube - 기말고사</h2>
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/ovC0cVtXrXQ?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+              </div>
+
               <div class="tm-black-bg tm-mb-20 tm-about-box-2">
                 <div class="tm-list-item tm-list-item-2">
                   <div class="tm-list-item-text-2">
