--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                 <div class="tm-list-item tm-list-item-2">
                   <div class="tm-list-item-text-2">
                     <h2 class="tm-text-primary">YouTube - 기말고사</h2>
-                   <iframe width="560" height="315" src="https://www.youtube.com/embed/ovC0cVtXrXQ?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7gzgwPRkVl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
             </div>
               </div>
